--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.25",
     "@vitejs/plugin-vue": "^2.2.2",
-    "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
@@ -30,6 +29,7 @@
     "prettier": "^2.5.1",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
+    "vite-plugin-voie": "^0.7.3",
     "vitest": "^0.5.0",
     "vue-tsc": "^0.31.4"
   }
