--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^2.5.1",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
+    "vite-plugin-md": "^0.11.8",
     "vite-plugin-voie": "^0.7.3",
     "vitest": "^0.5.0",
     "vue-tsc": "^0.31.4"
