--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "typescript": "~4.5.5",
+    "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.4",
     "vite-plugin-md": "^0.11.8",
     "vite-plugin-voie": "^0.7.3",
