--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite-ssg build",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -33,6 +33,7 @@
     "vite": "^2.8.4",
     "vite-plugin-md": "^0.11.8",
     "vite-plugin-voie": "^0.7.3",
+    "vite-ssg": "^0.17.10",
     "vitest": "^0.5.0",
     "vue-tsc": "^0.31.4"
   }
