--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.4",
     "vite-plugin-md": "^0.11.8",
-    "vite-plugin-voie": "^0.7.3",
+    "vite-plugin-pages": "^0.20.2",
     "vite-ssg": "^0.17.10",
     "vitest": "^0.5.0",
     "vue-tsc": "^0.31.4"
